--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,12 @@
         <div class="FormField__input--normal">
           <%= f.text_field :name, autofocus: true %>
         </div>
+         <div class="FormField__label--normal">
+          <%= f.label :nickname %>
+        </div>
+        <div class="FormField__input--normal">
+          <%= f.text_field :nickname, autofocus: true %>
+        </div>
       </div>
       <div class="FormField">
         <div class="FormField__label--normal">
