個人の投稿機能完了

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,11 +19,13 @@
     </table>
 
     <div class="more_list">
-        <% if user_signed_in? %>           
+        <% if user_signed_in? %>    
+          <% if  @user== current_user %>        
             
               <%= link_to 'edit 📝', edit_user_path(current_user), method: :get %>
-               
-        <% end %> 
+
+          <% end %>   
+        <% end %>  
     </div>   
 
  <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
