--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -1,3 +1,30 @@
 h6{
   font-size: 20px;
 }
+
+.item-info{
+  border: 1px solid black;
+  
+}
+
+.more_list{
+  margin: 15px 0;
+}
+
+.list-list{
+  margin-left: 0px;  
+  padding-left: 0px;  
+}
+
+.item__info{
+  margin: 0 0 30px 0;
+
+}
+.show-list{
+  width: 50vw;
+}
+.item-img{
+  width: 50%;
+  height: 50%;
+  margin: 20px 0 0 15px;
+}
