--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,47 +5,47 @@
     
   </div>
  
-  <div class='intern-contents'>
-    <div class="Company__info">
-      <h6>  Welcome back  <b><%= link_to current_user.name, user_path(current_user)%></b> san </h6>
+  <div class='item1-contents'>
+    <div class="item__info">
+      <h6>  Welcome back , <b><%= link_to current_user.name, user_path(current_user)%></b> ! </h6>
 
     </div>
    
- 
-        <%# <% @items.each do |item| %>
-          <%# <ul> %>
-            <%# <li class='list'>  
+      <div class = "list">
+        <% @items.each do |item| %>
+          <ul class= "list-list"> 
+            <li class='show-list'>  
 
-                      <div class='intern-info'>
+                      <div class='item-info'>
                         <h3 class='company-name'>
-                          <%= item.title %>    
-                        <%# </h3> %>
+                          <%= link_to item.title,item_path(item.id), method: :get %>    
+                        </h3>
+                          <div class='item-img-content'>
+                            <%= image_tag item.image, class: "item-img" if item.image.attached?%>
+                          </div>
 
+                        <%# <div class='user-date'>
+                          <span>Contributor : <%= link to item.user.name %></span>  
+                        <%# </div>   %>
                         
-                        <%# <ul class="more_list">
-                          <% if user_signed_in? %>   
-                            <%# <% if current_user== item.user %>            
-                              <%# <li> %> 
-                                <%# <%= link_to 'detail 👀', company_path(company.id), method: :get %>
-                              <%# </li> %> 
-                              <%# <li>  %>
-                                <%# <%= link_to 'edit 📝', edit_company_path(company.id), method: :get %>
-                              <%# </li>    %>
-                              <%# <li> %>
-                                <%# <%= link_to 'delete ❌', company_path(company.id), method: :delete %>
-                              <%# </li>   %>
-                            <%# <% end %> 
-                          <%# <% end %> 
-                        <%# </ul>   %>
+                        <ul class="more_list">
+                          <% if user_signed_in? %>          
+                            <% if current_user == item.user %>  
+                              <li>  
+                                <%= link_to 'EDIT 📝', edit_item_path(item.id), method: :get %>
+                              </li>    
+                              <li>
+                                <%= link_to 'DELETE ❌', item_path(item.id), method: :delete %>
+                              </li>   
+                            <% end %> 
+                          <% end %> 
+                        </ul>  
 
-                        <%# <div class='company-date'>
-                          <%# <span><%= item.date %> </span>  
-                        <%# </div>  %>
-                         
-                      <%# </div>   %> 
-            <%# </li>
+                      </div>   
+            </li>
           </ul>
-        <% end %>     
+        <% end %>  
+    </div>   
 
       
     <div class="entry_form">
