--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -15,6 +15,20 @@
             <span class="indispensable"> necessary </span>
           </div>
           <%= f.text_area :title, class:"items-title", id:"item-title", placeholder:"Plase fill in the title of this post (max: 20 letters)" %>
+          <%# 画像 %>
+          <div class="img-upload">
+            <div class="weight-bold-text">
+              <strong>* Image</strong>
+              <span class="indispensable"> necessary </span>
+            </div>
+            <div class="click-upload">
+              <p>
+                Click to upload file
+              </p>
+              <%= f.file_field :image, id:"item-image" %>
+            </div>
+          </div>
+          <%# /画像 %>
           <div class="items-explain">
             <div class="weight-bold-text">
               <strong>* Explanation</strong>
@@ -44,8 +58,9 @@
 
       <%# 下部ボタン %>
       <div class="items-btn-contents">
-        <%= f.submit "+++ Share your favorite ramen " ,class:"new-item-btn" %>
-        <br>
+          <%= f.submit "+++ Share your favorite ramen " ,class:"new-item-btn" %>
+          <br>
+
         <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
         <br>
       </div>
