--- a/app/views/ramens/index.html.erb
+++ b/app/views/ramens/index.html.erb
@@ -1,6 +1,7 @@
 <div class = "check">
     <% if user_signed_in? %> 
       <%= link_to '🏄🏼 Go to MyPage 🏄🏼‍♂️ ', items_path %>
+      <%= link_to '🐰 Go to shared page 🐰',"#" %>
     <% else %>
       <ul>
         <li><%= link_to '⇩ ログイン', new_user_session_path, class: "login" %></li>
