--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,7 @@
 <div class="item-show">
   <div class="item-box">
     <div class= "information-header">
-      <h1>Ramen</h1>
+      <h1 class="border-bottom-1">Ramen</h1>
     </div>
     <div class="item">
         <div class = item-title><h2><%= @item.title %></h2> by <%= link_to current_user.nickname,  user_path(current_user) %></div>
