--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -1,5 +1,6 @@
 h6{
   font-size: 20px;
+  
 }
 
 .item-info{
@@ -12,7 +13,7 @@ h6{
 }
 
 .list-list{
-  margin-left: 0px;  
+    
   padding-left: 0px;  
 }
 
@@ -27,4 +28,27 @@ h6{
   width: 50%;
   height: 50%;
   margin: 20px 0 0 15px;
+}
+
+.entry-form{
+  border: 1px solid black;
+  width: 20vw;
+  padding: 5px;
+  margin: 50px 0 30px 0;
+  text-align: center;
+  background-color: #ccc;
+}
+
+.share{
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.AccountPage{
+  background-color: lightcyan;
+  padding: 5px 10px  0  10px;
+}
+
+.border-bottom-1{
+  border-bottom: solid 1px black
 }
