--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="items-contents">
 
   <div class="items-main">
-    <h5 class="items-header">Edit the post 🍜</h5>
+    <h1 class="border-bottom-1">Edit the post 🍜</h1>
     <%= form_with model: @item , local: true do |f| %>
     
       <%# <%= render 'layouts/error_messages', model: f.object %> 
