--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,18 +1,20 @@
 <div class="AccountPage">
   <div class="Account__info">
    
-      <h1>MyPage </h1>
+      <h1 class="border-bottom-1">MyPage </h1>
     
   </div>
  
   <div class='item1-contents'>
     <div class="item__info">
-      <h6>  Welcome back , <b><%= link_to current_user.name, user_path(current_user)%></b> ! </h6>
+      <h6>  Welcome back , <b><%= link_to current_user.nickname, user_path(current_user)%></b> ! </h6>
 
     </div>
+    
    
       <div class = "list">
         <% @items.each do |item| %>
+         <% if current_user == item.user %>
           <ul class= "list-list"> 
             <li class='show-list'>  
 
@@ -44,11 +46,13 @@
                       </div>   
             </li>
           </ul>
+          <% end %>  
         <% end %>  
-    </div>   
+    </div>
+  
 
       
-    <div class="entry_form">
+    <div class="entry-form">
       <%= link_to ' + Share ramen 🍜', new_item_path(current_user) %>
     </div>
 
@@ -59,6 +63,9 @@
     <div class="Account_link">
       <% if user_signed_in? %>
         <br>
+        <%= link_to '🐰 Go to shared page 🐰', sharings_path, class: "share"%>
+        <br>
+        <br >
         <%= link_to '⇨ Logout', destroy_user_session_path, method: :delete, class: "logout" %>
         <br>
       <% else %>
