--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h4>MyProfile</h4>
+<h1 class="border-bottom-1">MyProfile</h1>
 <h2><%= link_to current_user.name , '#'%> 's profile</h2>
 
   <%= form_with model: @user ,url: user_path, local: true do |f| %>
