--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
       <div class="companies-btn-contents">
         <%= f.submit "⇧ Update" ,class:"user-btn" %>
         <br>
-        <%=link_to '⇨ back to MyProfile', user_path(current_user), class:"back-profile-btn" %>
+        <%=link_to '⇨ MyProfile', user_path(current_user), class:"back-profile-btn" %>
         <br>
       </div>
   <% end %>
