--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,5 +29,6 @@
           <% end %>   
         <% end %>  
     </div>   
-
- <%=link_to '⇨ back to MyPage', items_path(@user), class:"back-page-btn" %>
+    <div class="Account_link">
+      <%=link_to '⇨ MyPage', items_path(@user), class:"back-page-btn" %>
+    </div>
