--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -10,26 +10,26 @@
       <div class="new-items">
           <h6>< About the post  ></h6>
         <div class = "post">
-          <div class="weight-bold-text">
-            <strong>* Title</strong>
-            <span class="indispensable"> necessary </span>
+          <div class="items">
+            <div class="weight-bold-text">
+              <strong>* Title</strong>
+              <span class="indispensable"> necessary </span>
+            </div>
+            <%= f.text_area :title, class:"items-title", id:"item-title", placeholder:"Plase fill in the title of this post (max: 20 letters)" %>
           </div>
-          <%= f.text_area :title, class:"items-title", id:"item-title", placeholder:"Plase fill in the title of this post (max: 20 letters)" %>
           <%# 画像 %>
-          <div class="img-upload">
+          <div class="items">
             <div class="weight-bold-text">
               <strong>* Image</strong>
               <span class="indispensable"> necessary </span>
             </div>
             <div class="click-upload">
-              <p>
-                Click to upload file
-              </p>
+             
               <%= f.file_field :image, id:"item-image" %>
             </div>
           </div>
           <%# /画像 %>
-          <div class="items-explain">
+          <div class="items">
             <div class="weight-bold-text">
               <strong>* Explanation</strong>
               <span class="indispensable"> necessary </span>
@@ -39,15 +39,15 @@
         </div>
         
           <h6>< About the address of the ramen shop ></h6>
-          <div class= "ramens-address">
-          <div class="items-prefecture">
+        <div class= "ramens-address">
+          <div class="items">
             <div class="weight-bold-text">
               <strong>* Prefecture</strong>
               <span class="indispensable"> necessary </span>
             </div>
             <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {}, {class:"items-collection", id:"item-prefecture"}) %>
           </div>
-          <div class= "items-city">
+          <div class= "items">
             <div class="weight-bold-text">
               <strong>* City</strong>
               <span class="indispensable"> necessary </span>
@@ -61,7 +61,7 @@
           <%= f.submit "+++ Share your favorite ramen " ,class:"new-item-btn" %>
           <br>
 
-        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
+        <%=link_to '⇨ MyPage', items_path(current_user), class:"back-page-btn" %>
         <br>
       </div>
       <%# /下部ボタン %>
