--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -46,9 +46,14 @@ h6{
   background-color: lightcyan;
   padding:  10px;
 }
-
+/* 
 .border-bottom-1{
   border-bottom: solid 1px black
+} */
+
+.Account__info{
+  border-bottom: solid 1px black;
+  display: flex;
 }
 
 ul{
@@ -70,6 +75,6 @@ ul{
 }
 
 .Account_link{
-  text-align: center;
+  margin: 30px 0 30px auto ;
 }
 
