--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,19 @@
 <div class="items-contents">
 
   <div class="items-main">
-    <h1 class="border-bottom-1">EditPage </h1>
+
+
+    <div class= "Account__info">
+    
+      <h1 class="border-bottom-1">EditPage </h1>
+
+      <div class="Account_link">
+        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
+      </div>
+    </div>
+
+
+   
     <%= form_with model: @item , local: true do |f| %>
     
       <%# <%= render 'layouts/error_messages', model: f.object %> 
@@ -59,9 +71,6 @@
       <%# 下部ボタン %>
       <div class="items-btn-contents">
         <%= f.submit "⇧ Update " ,class:"new-item-btn" %>
-        <br>
-        <%=link_to '⇨ MyPage', items_path(current_user), class:"back-page-btn" %>
-        <br>
       </div>
       <%# /下部ボタン %>
     
