--- a/app/views/ramens/index.html.erb
+++ b/app/views/ramens/index.html.erb
@@ -1,13 +1,16 @@
 <div class = "check">
     <% if user_signed_in? %> 
-      <%= link_to '🏄🏼 Go to MyPage 🏄🏼‍♂️ ', items_path %>
+      <%= link_to '🏄🏼 MyPage 🏄🏼‍♂️ ', items_path %>
       <br>
-      <%= link_to '🐰 Go to shared page 🐰', sharings_path %>
+      <%= link_to '🐰 SharePage 🐰', sharings_path %>
+      <br>
+      <br>
+      <%= link_to '🍻 EventPage 🍻', events_path %>
       <br>
     <% else %>
       <ul>
-        <li><%= link_to '⇩ ログイン', new_user_session_path, class: "login" %></li>
-        <li><%= link_to '⇩ 新規登録', new_user_registration_path, class: "sign-up" %></li>
+        <li><%= link_to '⇩ Login', new_user_session_path, class: "login" %></li>
+        <li><%= link_to '⇩ New Registration', new_user_registration_path, class: "sign-up" %></li>
       </ul> 
     <% end %> 
 </div> 
