間違いあったらここに戻る

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -43,6 +43,9 @@
         <% end %> 
       <% end %>       
     </div>
+
+    <%# <%= yield 'participations/participation.html.haml' %>  
+
   </div>
 
   <div class="container">
