--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,9 +37,27 @@
           <br>  
           <br>     
         </tr> 
+         <tr>
+          <th class="detail-item">participants</th>
+          <td class="detail-value"><%= @event.likes.count %></td>
+        </tr> 
       </tbody>
     </table>
    
+    <div class= "participants">
+
+      <% if current_user.already_liked?(@event) %>
+        <%= button_to 'いいねを取り消す', event_like_path(@event), method: :delete %>
+      <% else %>
+        <%= button_to 'いいね', event_likes_path(@event) %>
+      <% end %>
+
+      <h4>いいねしたユーザー</h4>
+      <% @event.liked_users.each do |user| %>
+        <li><%= user.nickname %></li>
+      <% end %>
+
+    </div>
         
     <div class= edit-destroy>
       <% if user_signed_in? %>  
